# secretagent-rust-agent-2026-06-19

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  NOTICE  PROGRESS.md  README.md  ROADMAP.md  compose.yaml  deny.toml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/sa-audit/: Cargo.toml
crates/sa-audit/src/: lib.rs
crates/sa-connectors/: Cargo.toml
crates/sa-connectors/src/: discord.rs  email.rs  lib.rs  slack.rs  telegram.rs
crates/sa-core/: Cargo.toml
crates/sa-core-types/: Cargo.toml
crates/sa-core-types/src/: config.rs  lib.rs  policy.rs  principal.rs  taint.rs  types.rs
crates/sa-core-types/tests/: provenance_notice.rs
crates/sa-core/src/: eval.rs  lib.rs  schedule.rs
crates/sa-exec/: Cargo.toml
crates/sa-exec/src/: landlock_linux.rs  lib.rs
crates/sa-exec/tests/: landlock_escape.rs
crates/sa-memory/: Cargo.toml
crates/sa-memory/src/: lib.rs
crates/sa-providers/: Cargo.toml
crates/sa-providers/src/: anthropic.rs  lib.rs  openai.rs
crates/sa-tools/: Cargo.toml
crates/sa-tools/src/: egress.rs  lib.rs  mcp.rs
crates/sa-tools/src/tools/: http_request.rs  mod.rs  op_tool.rs  shell.rs  web_extract.rs  web_search.rs
crates/sa-vault/: Cargo.toml
crates/sa-vault/src/: age_file.rs  lib.rs
docs/: HANDOFF-2026-06-25.md  HANDOFF-phase3.md  HANDOFF-phase4-continued.md  HANDOFF-phase4.md  HANDOFF-phase5.md  HANDOFF-phase6.md  NEXT-SESSION-PROMPT-6g.md  OPERATOR-SETUP-RUNBOOK.md  RELEASE.md  SLACK-E2E-RUNBOOK.md  parity-tail.md
docs/superpowers/plans/: 2026-06-19-secretagent-phase0.md  2026-06-19-secretagent-phase1.md  2026-06-20-secretagent-phase2a.md  2026-06-20-secretagent-phase2b.md  2026-06-20-secretagent-phase2c.md  2026-06-20-secretagent-phase3a.md  2026-06-20-secretagent-phase3b.md  2026-06-20-secretagent-phase3c.md  2026-06-21-secretagent-phase4a-trust-spine.md  2026-06-21-secretagent-phase4b-service-install.md  2026-06-21-secretagent-phase4c-connectors.md  2026-06-22-secretagent-phase4d-scheduler.md  2026-06-23-secretagent-phase5a-execution-backends.md  2026-06-23-secretagent-phase5b-slack-connector.md  2026-06-23-secretagent-phase5c-subagent.md  2026-06-23-secretagent-phase5d-voice.md  2026-06-24-secretagent-phase6c-egress-seam.md  2026-06-24-secretagent-phase6d-system-external-tools.md  2026-06-24-secretagent-phase6e-providers.md  2026-06-24-secretagent-phase6g-ops.md  2026-06-24-secretagent-phase6h-self-update.md
scripts/: test-install-verify.sh
secretagent/: Cargo.toml  build.rs
secretagent/src/: chat.rs  doctor.rs  exec.rs  gateway.rs  main.rs  model.rs  ops.rs  pref.rs  run.rs  schedule.rs  self_update.rs  setup.rs  skill.rs  summarize.rs  tui.rs  voice.rs
secretagent/src/service/: linux.rs  mod.rs  windows.rs
secretagent/tests/: chat.rs  cli.rs  live_exec.rs  live_mcp.rs  live_ollama.rs  live_tools.rs  pref.rs  run.rs  skill.rs  summarize.rs
