[workspace]
resolver = "2"
members = [
    "crates/sa-core-types",
    "crates/sa-vault",
    "crates/sa-audit",
    "crates/sa-memory",
    "crates/sa-providers",
    "crates/sa-core",
    "crates/sa-tools",
    "crates/sa-exec",
    "crates/sa-connectors",
    "secretagent",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Vividness9816/secretagent-rust-agent-2026-06-19"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
secrecy = { version = "0.8", features = ["serde"] }
age = "0.10"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures = "0.3"
async-trait = "0.1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Windows-only (target-gated in consuming crates) — never enters the musl-static Linux graph.
windows-service = "0.7"

# Phase 4c connectors (feature-gated, optional in sa-connectors). ALL rustls/webpki-only so the
# musl-static binary keeps zero openssl/native-tls surface; twilight uses pure-Rust zlib (NOT the
# default zstd C lib).
twilight-gateway = { version = "0.17.1", default-features = false, features = ["rustls-webpki-roots", "zlib", "twilight-http"] }
twilight-http = { version = "0.17.1", default-features = false, features = ["rustls-webpki-roots"] }
twilight-model = "0.17.1"
# `ring` (NOT the default aws-lc-rs) keeps the rustls crypto provider C-free/musl-clean and
# consistent with the existing reqwest(ring) build — see the deny.toml note.
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "ring", "builder", "smtp-transport"] }
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots = "1"
futures-util = "0.3"
mailparse = "0.16"

# Slack (feature `slack`) — Socket Mode WSS. Pinned to the version already in-tree via
# twilight-gateway, so no NEW transitive/license surface. rustls + webpki-roots + `ring` (NOT the
# aws-lc-rs default) keeps the musl-static, no-aws-lc-sys invariant.
tokio-websockets = { version = "0.13", default-features = false, features = ["client", "rustls-webpki-roots", "ring", "fastrand"] }

[profile.release]
strip = true
lto = "thin"
