[package]
name = "secretagent"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "secretagent"
path = "src/main.rs"

[dependencies]
sa-core-types = { path = "../crates/sa-core-types" }
sa-vault = { path = "../crates/sa-vault" }
sa-audit = { path = "../crates/sa-audit" }
sa-memory = { path = "../crates/sa-memory" }
sa-providers = { path = "../crates/sa-providers" }
sa-core = { path = "../crates/sa-core" }
clap.workspace = true
anyhow.workspace = true
secrecy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
futures.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
