[package]
name = "secretagent"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "secretagent"
path = "src/main.rs"

[features]
default = ["voice"]
# `voice` gates the bin's voice module + subcommand only (it adds NO dependency — pure shell-out).
# A hardened build can drop the voice shell-out surface with --no-default-features.
voice = []

[dependencies]
sa-core-types = { path = "../crates/sa-core-types" }
sa-vault = { path = "../crates/sa-vault" }
sa-audit = { path = "../crates/sa-audit" }
sa-memory = { path = "../crates/sa-memory" }
sa-providers = { path = "../crates/sa-providers" }
sa-core = { path = "../crates/sa-core" }
sa-tools = { path = "../crates/sa-tools" }
sa-exec = { path = "../crates/sa-exec" }
sa-connectors = { path = "../crates/sa-connectors", features = ["discord", "email", "slack"] }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
secrecy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
futures.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
