[package]
name = "secretagent"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "secretagent"
path = "src/main.rs"

[features]
default = ["voice", "tui"]
# `voice` gates the bin's voice module + subcommand only (it adds NO dependency — pure shell-out).
# A hardened build can drop the voice shell-out surface with --no-default-features.
voice = []
# `tui` gates the interactive reedline REPL (6f). A headless/server build drops reedline entirely.
tui = ["dep:reedline"]

[dependencies]
sa-core-types = { path = "../crates/sa-core-types" }
sa-vault = { path = "../crates/sa-vault" }
sa-audit = { path = "../crates/sa-audit" }
sa-memory = { path = "../crates/sa-memory" }
sa-providers = { path = "../crates/sa-providers" }
sa-core = { path = "../crates/sa-core" }
sa-tools = { path = "../crates/sa-tools" }
sa-exec = { path = "../crates/sa-exec" }
sa-connectors = { path = "../crates/sa-connectors", features = ["discord", "email", "slack"] }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
sha2 = "0.10"                              # binary-integrity self-hash for `doctor` (§9); pure-Rust, musl-clean
toml_edit = "0.22"                         # format-preserving `[provider] model` rewrite (6e); pure-Rust (winnow), musl-clean
reedline = { version = "0.39", optional = true } # interactive REPL line-editor (6f); pure-Rust (crossterm), musl-clean
secrecy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
futures.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
sa-memory = { path = "../crates/sa-memory" } # 6g: seed/verify the live DB in the backup round-trip test
