[package]
name = "sa-connectors"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true # Telegram getUpdates/sendMessage (rustls, already pinned)
serde_json.workspace = true
# Discord/Email land in Task 4 behind features.
