[package]
name = "sa-connectors"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true # Telegram getUpdates/sendMessage (rustls, already pinned)
serde_json.workspace = true
tracing.workspace = true # structured connector logs (no secret values)

# Discord (feature `discord`) — twilight poll-based shard + http. rustls-webpki-roots only +
# pure-Rust zlib (NOT default zstd C lib) keeps the musl-static invariant.
twilight-gateway = { workspace = true, optional = true }
twilight-http = { workspace = true, optional = true }
twilight-model = { workspace = true, optional = true }

# Email (feature `email`) — lettre SMTP (tokio1-rustls-tls) + async-imap over a caller-supplied
# tokio-rustls TLS stream (NO async-native-tls). webpki-roots for the trust anchors.
lettre = { workspace = true, optional = true }
async-imap = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
mailparse = { workspace = true, optional = true }

# Slack (feature `slack`) — Socket Mode WSS via tokio-websockets (rustls/webpki/`ring`, already
# in-tree via twilight). `apps.connections.open`/`chat.postMessage` reuse the existing reqwest dep.
tokio-websockets = { workspace = true, optional = true }

[features]
discord = ["dep:twilight-gateway", "dep:twilight-http", "dep:twilight-model"]
email = [
    "dep:lettre",
    "dep:async-imap",
    "dep:tokio-rustls",
    "dep:webpki-roots",
    "dep:futures-util",
    "dep:mailparse",
]
# `dep:tokio-rustls` (workspace-pinned to `ring`) is pulled so even a slack-ONLY build resolves
# rustls to ring (no aws-lc-rs) for the live WSS connect; tokio-websockets pulls webpki-roots.
slack = ["dep:tokio-websockets", "dep:futures-util", "dep:tokio-rustls"]
