[package]
name = "sa-core-types"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
directories.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
