[package]
name = "sa-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
sa-memory = { path = "../sa-memory" }
sa-providers = { path = "../sa-providers" }
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
async-stream = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
