[package]
name = "sa-tools"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
sa-core-types = { path = "../sa-core-types" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
