[package]
name = "sa-vault"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
sa-core-types = { path = "../sa-core-types" }
age.workspace = true
secrecy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
